fix(test): preserve V5.1 observer traces across SIGKILL